welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: not found: value estSurOrange
while(!estSurOrange)
       ^Poucet:13: error: type mismatch;
 found   : Unit
 required: Boolean
	if(nbPas = 5)
                 ^